# AC22CMP

./: .gitignore
ApoucCompiler-Final/ApouC/: A12.bat  ApouC.sln  ApouC.vcxproj  ApouC.vcxproj.filters  ApouC_INPUT1_HelloWorld.apc  ApouC_INPUT2_VolumeSphere.apc  ApouC_INPUT3_Factorial.apc  ApouC_INPUT5_CodeExample.apc  Compilers.c  Compilers.h  INPUT2_Volume.apc  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h  hello.apc  sample.apc  sample.apc.txt  sample.txt
ApoucCompiler-Final/input/: A12.bat  ApouC_INPUT2_VolumeSphere.apc  ApouC_INPUT4_Datatypes.apc  ApouC_INPUT6_BIG.apc  INPUT0_Empty-A12.out  INPUT1_Hello-A12.out  INPUT2_Volume-A12.out  INPUT3_Factorial-A12.out  INPUT4_Datatypes-A12.out  INPUT5_General-A12.out  INPUT6_Big-A12-a-100-10.out  INPUT6_Big-A12-f-100-10.out
CompilerAssignment-A12-Code-Boa/CompilerAssignment/code/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h  launch.vs.json
CompilerAssignment-A21-Specification/: A21_Eman420_Vecchio137.doc  A21_TransitionTable_Eman420_Vecchio137.xlsx  Apouc_TransitionTable.xlsx  CST8152_Compilers_F22-A21-ApouC_Model.doc  CST8152_Compilers_F22-A21-BOA-PARTIAL1.pptx  CST8152_Compilers_F22-A21-YOURLANGUAGE_Model.doc  ~WRL3700.tmp
CompilerAssignment-A31/: A31_F22_APOUC_Eman420_Vecchio137.doc  A31_F22_YOURLANGUAGE_Template.doc  RE.doc  ~WRL2367.tmp  ~WRL2482.tmp
CompilerAssignment_A11-Specification-Apouc/: A11_Eman420.docx
Labs/MyLabs/: MyLabs.sln  MyLabs.vcxproj  MyLabs.vcxproj.filters  cdtypes.txt
Labs/apouC_A11/: apouC_A11.sln  (+2 more)
(+170 files in other folders)
